# Resumate

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: DATABASE_ARCHITECTURE.md  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/routes/: auth.py  master_profile.py  resumes.py  users.py
backend/app/core/: config.py  db.py  db_indexes.py  logging_config.py  rate_limiter.py  security.py
backend/app/models/: __init__.py  job.py  pyobjectid.py  resume.py  user.py
backend/app/scripts/: __init__.py  init_db.py
frontend/: .prettierrc.cjs  AUTHENTICATION_IMPROVEMENTS.md  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: axios.ts  resumeService.ts
frontend/src/components/: ErrorBoundary.tsx  LoginForm.tsx  OnboardingModal.tsx  RegisterForm.tsx
frontend/src/components/dashboard/: DashboardLayout.tsx  EditGoalsModal.tsx  Sidebar.tsx
frontend/src/components/layout/: Footer.tsx  Header.tsx
frontend/src/components/resume/: ResumeEditor.tsx  ResumePreview.tsx
frontend/src/hooks/: useAuth.tsx
frontend/src/pages/: DashboardPage.tsx  LandingPage.tsx  LoginPage.tsx  RegisterPage.tsx  ResumeBuilderPage.tsx  TrackerPage.tsx
frontend/src/routes/: ProtectedRoute.tsx
frontend/src/utils/: authEvents.ts  authValidation.ts
